<resources>
    <string name="app_name">EntertainMatch</string>
    <string name="app_id">296494280783399</string>

    <string name="snackbar_dismiss">OK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ongoing_polls">Ongoing polls</string>
    <string name="upcoming_events">Upcoming events</string>

    <string name="poll_status_category">Voting on category</string>
    <string name="poll_status_event">Voting on event</string>
    <string name="poll_status_date">Voting on date</string>
    <string name="poll_status_completed">Voting completed</string>

    <string name="title_activity_vote_category">Vote for category</string>
    <string name="vote_icon_description">Vote</string>
    <string name="vote_category_snackbar">Thanks! Your vote was registered.
        We\'ll notify you when the others have made a choice.
    </string>
    <string name="title_event_list">Vote for an event</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="event_image">Event image</string>
    <string name="event_details">Details</string>
    <string name="event_director_label">Director</string>
    <string name="event_cast_label">Cast</string>
    <string name="movie_event_score_label">Score on Rotten Tomatoes</string>

    <string name="title_activity_vote_date">Vote for a date</string>
    <string name="see_location_on_map">See location on map</string>
    <string name="confirm_vote">Confirm</string>
    <string name="vote_result_headline">So it\'s settled then!</string>
    <string name="vote_result_introduction">You\'ve chosen to see</string>
    <string name="vote_result_place_preposition">at</string>
    <string name="vote_result_date_preposition">on the date of</string>
    <string name="vote_result_call_to_action">Are you going?</string>
    <string name="vote_result_yes">Yes</string>
    <string name="vote_result_no">No</string>
    <string name="title_activity_create_poll">New poll</string>
    <string name="new_poll_name">New poll name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="login_button_text">Login with Facebook</string>
    <string name="loading_message">Loading…</string>
    <string name="requested_facebook_info">id, name, picture</string>
    <string name="create_poll">Create</string>
    <string name="create_poll_empty_name_error">The poll name cannot be empty</string>
    <string name="create_poll_no_people_selected">You must select at least one person</string>
    <string name="splash_screen_text">Welcome to EntertainMatch! We\'ll help you and your friends decide what to do on a
        day out. To continue, please
    </string>
    <string name="voting_finished">Voting finished! Moving to next stage</string>
    <string name="vote_event_start_tip">Swipe in any direction on an event to dismiss it. The last remaining item will
        be chosen.
    </string>
    <string name="vote_event_item_discarded">Discarded %s from the list</string>

    <string name="concert_event_band_members">Band members</string>
    <string name="concert_event_last_album">Last released album</string>
    <string name="play_event_duration">Duration</string>
    <string name="play_event_costumes">Costumes</string>
    <string name="play_event_scenography">Scenography</string>
    <string name="view_participants">View participants</string>
    <string name="poll_view_progress">View progress</string>

    <string name="list_of_participants">Who\'s voted so far?</string>
    <string name="date_notification">Thank you for your votes. We will inform you once everyone make decision.</string>
    <string name="results_stage_message">Choosing date has been finished! Moving to results stage.</string>
    <string name="already_voted">You have already voted!</string>
    <string name="going_positive">Have a great time!</string>
    <string name="going_negative">Sorry to hear that :(</string>
    <string name="delete_completed">Delete from list</string>
    <string name="vote_category_tie">There was a tie. Vote for one of the remaining categories!</string>

    <string name="no_calendar_permissions">Cannot add an event to a calendar - no permissions granted</string>
    <string name="calendar_event_title" type="id">%1$s in %2$s</string>
    <string name="calendar_event_description">Don\'t forget about an Entertain-Matched event</string>
    <string name="calendar_failed">Failed to add an event to a calendar</string>
    <string name="location_settings_category">Location settings</string>

    <string name="pref_location_label">Your location</string>
    <string name="pref_location_summary">Choose which location to use when searching for events</string>
    <string name="no_city_set_snackbar">You haven\'t chosen your city yet. Choose one to start adding polls!</string>
    <string name="no_city_set_snackbar_action">Set city</string>
    <string name="message_tie">There was a tie! Choose from remaining events!</string>
    <string name="internet_dialog_message">It seems that you are not connected to the internet</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="one_voting_chance_message">You will not be able to change your mind later</string>
    <string name="vote">Vote</string>
</resources>
