<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="?attr/buttonBarStyle"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_vote_result"
        tools:context="io.github.entertainmatch.view.result.VoteResultActivity">

    <ImageView android:id="@+id/event_image"
               android:layout_width="@dimen/result_image_width"
               android:layout_height="match_parent"
               android:scaleType="centerCrop" />

    <RelativeLayout android:id="@+id/result_footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/event_image"
                    android:layout_toEndOf="@id/event_image"
                    android:padding="16dp"
                    android:layout_alignParentBottom="true">

        <TextView android:id="@+id/result_call_to_action"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="24sp"
                  android:paddingTop="16dp"
                  android:paddingBottom="16dp"
                  android:layout_centerHorizontal="true"
                  android:textColor="@color/colorTintPrimary"
                  android:text="@string/vote_result_call_to_action"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerHorizontal="true"
                      android:layout_below="@id/result_call_to_action">

            <Button android:id="@+id/result_yes"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drawable_button_yes_bg"
                    android:textColor="@color/colorTintPrimary"
                    android:text="@string/vote_result_yes"/>

            <Button android:id="@+id/result_no"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drawable_button_no_bg"
                    android:textColor="@color/colorTintPrimary"
                    android:text="@string/vote_result_no"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout android:id="@+id/result_details"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_above="@id/result_footer"
                  android:layout_toRightOf="@id/event_image"
                  android:layout_toEndOf="@id/event_image"
                  android:padding="16dp"
                  android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:text="@string/vote_result_introduction"
                  android:textColor="@color/colorTintPrimary" />

        <TextView android:id="@+id/result_event_name"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:text="Ghost in the Shell"
                  android:textColor="@color/colorTintPrimary" />

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:text="@string/vote_result_place_preposition"
                  android:textColor="@color/colorTintPrimary" />

        <TextView android:id="@+id/result_event_place"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:text="Cinema City Warszawa, Galeria Mokotów"
                  android:textColor="@color/colorTintPrimary" />

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:text="@string/vote_result_date_preposition"
                  android:textColor="@color/colorTintPrimary" />

        <TextView android:id="@+id/result_event_date"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:textStyle="bold"
                  android:text="May 9, 2017 19:40"
                  android:textColor="@color/colorTintPrimary" />

    </LinearLayout>

</RelativeLayout>
